--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 
 
-    <h5 id="git">NPM</h5>
+    <h5 id="git">GIT</h5>
         <ul class="collapsible">
             <li>
                 <div class="collapsible-header"><i class="material-icons">filter_drama</i>Git Reset –soft, –mixed, and –hard</div>
@@ -246,23 +246,94 @@
                 <div class="collapsible-body">
                     В git є 2 принципи переміщення змін з однієї бренчі в іншу - merge and the rebase. Обидві команди служать одній і ті ж меті. Проте є принципова різниця в тому, як вони працюють.
                     <strong>Git merge</strong><br />
-
+                    Git merge створює новий коміт об'єднання, git rebase переміщує або об'єднує зміни, змінюючи історію комітів.
+                    <p>Важливо використовувати <strong>git rebase</strong> лише для локальних гілок, оскільки вона може переписати історію, що може створити конфлікти у віддалених гілках.</p>
+                    git rebase використовується для інтеграції змін з однієї гілки в іншу, переміщаючи або об'єднуючи коміти. Він допомагає підтримувати лінійну історію проекту, зробивши її більш чистою, ніж традиційне злиття. Зазвичай використовується для оновлення гілки функцій із змінами з основної гілки.
                 </div>
             </li>
 
             <li>
-                <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-header"><i class="material-icons">place</i>Як створити та застосувати теги в Git і для чого вони використовуються?</div>
+                <div class="collapsible-body">
+                    Теги в Git - це вказівники на конкретні коміти, які дозволяють легко ідентифікувати конкретні версії вашого коду. Вони корисні для позначення важливих точок в історії вашого проекту, таких як випуски програми або стабільні версії.
+
+                    Команда:
+                    git tag < ім'я тегу>
+                </div>
             </li>
 
             <li>
-                <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-header"><i class="material-icons">place</i>Що таке .gitignore файл і як його налаштувати для виключення файлів та каталогів з репозиторію?
+                </div>
+                <div class="collapsible-body">Файл .gitignore використовується для вказівки Git на те, які файли та каталоги повинні бути ігноровані при відстеженні та коміту в репозиторій. Це особливо корисно, коли ви маєте файли або каталоги, які ви не хочете включати в контроль версій, наприклад, файли конфігурації, файли локальних налаштувань або кешовані файли.</div>
             </li>
 
             <li>
-                <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-header"><i class="material-icons">place</i>Як організувати безпеку Git-репозиторію? Як би ви відреагували на можливі загрози?</div>
+                <div class="collapsible-body">
+                    <ul>
+                        <li>Регулярно робіть резервні копії</li>
+                        <li>Стежіть за безпековими оновленнями</li>
+                        <li>Використовуйте правила доступу:
+                            Налаштуйте правила доступу до репозиторію, визначаючи, хто і як може змінювати код. Використовуйте рівні доступу (read, write, admin) залежно від ролей учасників.</li>
+                    </ul>
+                </div>
+            </li>
+
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>Як ви вирішуєте конфлікти під час злиття гілок в Git і які інструменти Git ви використовуєте для цього?</div>
+                <div class="collapsible-body">
+                    Злиття гілок в Git із конфліктами вимагає ручного вирішення. Для вирішення конфліктів:
+                    <ol>
+                        <li>Після злиття гілок і виникнення конфліктів, Git вказує вам на ці файли та вказує конфліктуючі ділянки коду,
+                            які вам потрібно вирішити. Ви редагуєте ці файли, видаляючи мітки конфлікту та виправляючи код так, як вам потрібно;</li>
+                        <li>Після вирішення конфліктів відзначте файли як вирішені за допомогою команди git add;</li>
+                        <li>Продовжте злиття за допомогою git merge --continue.</li>
+                    </ol>
+                </div>
+            </li>
+
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>Чим відрізняється git pull від git fetch?</div>
+                <div class="collapsible-body">git pull завантажує зміни з віддаленого репозиторію та об'єднує їх у поточну гілку. git fetch лише завантажує зміни, але не автоматично їх об'єднує, залишаючи можливість перегляду та ручного об'єднання.</div>
+            </li>
+
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>Як ви відміняєте коміт, який вже був відправлений в віддалений репозиторій?</div>
+                <div class="collapsible-body">Відміна коміту включає створення нового коміту, який відміняє зміни. Щоб відмінити відправлений коміт, використовуйте <strong>git revert < ідентифікатор-коміту ></strong> і потім відправте новий коміт.</div>
+            </li>
+
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>Розкажіть про різницю між Git та GitHub (або GitLab)</div>
+                <div class="collapsible-body">Git - це система контролю версій, тоді як GitHub та GitLab - це платформи, що надають хостинг для Git-репозиторіїв і додаткові можливості співпраці, такі як відстеження проблем, pull-реквести та інше.</div>
+            </li>
+
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>Що таке Git hook і як він може бути корисним у розробці?</div>
+                <div class="collapsible-body">Git hook - це скрипт, який автоматично запускається на певних етапах життєвого циклу Git. Його можна використовувати для завдань, таких як попередні перевірки перед комітом, лінтування чи автоматичного запуску тестування, поліпшуючи розробницький процес.</div>
+            </li>
+
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>git squash command</div>
+                <div class="collapsible-body">
+                    git squash - це команда, яка дозволяє об'єднати кілька послідовних комітів в один. Це корисно, коли ви хочете зберегти лише один об'єднаний коміт замість кількох малих комітів.
+
+                    Основна ідея у тому, щоб зменшити кількість комітів у історії репозиторію, роблячи її більш зрозумілою та легкою для розуміння.
+
+                    Щоб скористатися командою git squash, ви можете використовувати інтерактивний режим перебазування. Ось приклад:
+
+                    <ol>
+                        <li>Виберіть команду перебазування для останніх, наприклад, 3-х комітів: <strong>git rebase -i  HEAD~3</strong></li>
+                        <li>З'явиться текстовий редактор із списком останніх 3 комітів. Замість слова pick для всіх комітів, які ви хочете об'єднати, змініть його на squash або просто s для скорочення.
+                            pick abc123 Some commit message <br />
+                            squash def456 Another commit message <br />
+                            squash xyz789 Yet another commit message
+                        </li>
+                        <li>Збережіть зміни і закрийте редактор. Відкриється новий редактор для об'єднання повідомлень комітів. Залиште той, який вам потрібен, або об'єднайте їх в одне нове повідомлення.</li>
+                        <li>Збережіть зміни, закрийте редактор, і Git об'єднає обрані коміти в один, залишаючи новий коміт зі зміненим повідомленням.</li>
+                    </ol>
+                    Зауважте, що використання git squash може вплинути на історію комітів, тому важливо враховувати це при використанні в спільної роботи з іншими розробниками або при роботі з гілками, які вже були опубліковані.
+                </div>
             </li>
 
         </ul>
